# src/ArquitecturaBaseMultitenant.Application/Models/Identity/GoogleChallengeResponse.cs
@@ -1,0 +1,6 @@
+namespace ArquitecturaBaseMultitenant.Application.Models.Identity;
+
+public sealed record GoogleChallengeResponse(string RedirectUrl)
+{
+    public override string ToString() => nameof(GoogleChallengeResponse);
+}
